--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -4,7 +4,7 @@
 # Stable
 edition = "2018"
 fn_args_layout = "Compressed"
-max_width = 100
+max_width = 80
 tab_spaces = 2
 use_field_init_shorthand = true
 use_try_shorthand = true
@@ -12,5 +12,5 @@ use_small_heuristics = "Max"
 
 # Unstable
 format_code_in_doc_comments = true
-merge_imports = true
+imports_granularity="Crate"
 wrap_comments = true
